# VYStat-VM

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  inst.yaml  instr.py  instr.yaml  shrimp.cpp
.github/workflows/: ci.yaml
assembler/: CMakeLists.txt  gen_inst.py  gen_instr.py  gen_parser.py
assembler/include/shrimp/: assembler.hpp  lexer.hpp
assembler/include/shrimp/assembler/: lexer.hpp
assembler/src/: assembler.cpp  lexer.cpp  lexer.ll
common/: CMakeLists.txt  bitops.hpp  gen_inst_opcode.py  gen_instr_opcode.py  types.hpp
common/include/shrimp/common/: bitops.hpp  logger.hpp  types.hpp
frontend/: CMakeLists.txt  lang2shrimp.cpp  lexer.cpp  main.cpp  parser.cpp
frontend/include/shrimp/: lang2shrimp.hpp  lexer.hpp  parser.hpp
frontend/include/shrimp/frontend/: astnode.hpp
isa/: isa.cmake  isa.py  isa.yaml
runtime/: CMakeLists.txt  accumulator.hpp  bytecode_inst.hpp  gen_inst.py  runtime.cpp  runtime.hpp  shrimp_vm.hpp
runtime/common/: CMakeLists.txt
runtime/common/include/shrimp/runtime/: accumulator.hpp  bytecode_inst.hpp  frame.hpp  register.hpp
runtime/interpreter/: CMakeLists.txt  frame.hpp  gen_dispatch_table.py  gen_instr.py  interpreter-inl.hpp  interpreter.cpp  interpreter.hpp  intrinsics.cpp  intrinsics.hpp
runtime/interpreter/include/shrimp/runtime/: interpreter.hpp
runtime/interpreter/include/shrimp/runtime/interpreter/: intrinsics.hpp
runtime/interpreter/src/: interpreter.cpp  intrinsics.cpp
runtime/memory/: CMakeLists.txt
runtime/memory/include/shrimp/runtime/memory/: arena_allocator.hpp  class_word.hpp  gc.hpp  mark_word.hpp  memory_resource.hpp  object_header.hpp
runtime/objects/: CMakeLists.txt
runtime/objects/include/shrimp/runtime/coretypes/: array.hpp  class.hpp  string.hpp
runtime/runtime/: CMakeLists.txt
runtime/runtime/include/shrimp/runtime/: runtime.hpp
runtime/runtime/src/: runtime.cpp
runtime/shrimp_vm/: CMakeLists.txt  gen_dispatch_table.py  gen_instr.py
runtime/shrimp_vm/include/shrimp/runtime/: shrimp_vm.hpp
runtime/shrimp_vm/include/shrimp/runtime/shrimp_vm/: interpreter-inl.hpp  interpreter.hpp  intrinsics.hpp
runtime/shrimp_vm/src/: interpreter.cpp  intrinsics.cpp  shrimp_vm.cpp
scripts/: install_third_party.py  run_clang_format.py  run_clang_tidy.py  third_party_list.txt
shrimp/: CMakeLists.txt
shrimp/src/: shrimp.cpp
shrimpfile/: CMakeLists.txt
shrimpfile/include/shrimp/: shrimpfile.hpp
shrimpfile/src/: shrimpfile.cpp
tests/: CMakeLists.txt  sin_cos.shr  square_eq.shr
tests/cts_tests/interpreter/: CMakeLists.txt  add_f.shr  add_i32.shr  arr_lda_sta_i32.shr  arr_lda_sta_ref.shr  call_0arg.shr  call_1arg.shr  call_2arg.shr  call_3arg.shr  call_4arg.shr  cmp_eq_i32.shr  cmp_gg_i32.shr  cmp_ll_i32.shr  div_f.shr  div_i32.shr  fields.shr  jump.shr  jump_eq.shr  jump_gg.shr  jump_ll.shr  lda.shr  lda_imm_f.shr  lda_imm_i32.shr  mov.shr  mov_imm_f.shr  mov_imm_i32.shr  mul_f.shr  mul_i32.shr  obj_new.shr  sta.shr  sub_f.shr  sub_i32.shr
tests/e2e_tests/: CMakeLists.txt  jump.shr  sin_cos.shr  square_eq.shr  strings.shr  trigonometry.shr
tests/e2e_tests/bytecode/: CMakeLists.txt  class.shr  grand_bench.shr  jump.shr  square_eq.shr
tests/e2e_tests/frontend/: CMakeLists.txt  arithm.lang  array.lang  fact.lang  floats.lang  for_loop.lang  if.lang  nested_if.lang  sqrt_eq.lang  square_test.lang  strings.lang
